--- a/front-end/src/page/product/Product.css
+++ b/front-end/src/page/product/Product.css
@@ -7,10 +7,10 @@
     padding: 10px;
 }
 
-.card {
+/* .card {
     max-width: 20% ;
     max-height: 400px ;
-}
+} */
 
 .card-img-top {
     height: 250px;
