--- a/front-end/src/components/loginForm/Loginform.css
+++ b/front-end/src/components/loginForm/Loginform.css
@@ -5,3 +5,11 @@
   height: 1px;
   background: #eee;
 }
+.login-container{
+  display: flex;
+  text-align: center;
+  justify-content:center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+}
