--- a/front-end/src/components/registerForm/registerForm.css
+++ b/front-end/src/components/registerForm/registerForm.css
@@ -1,38 +1,154 @@
-.Auth-form-container {
-    margin: 0px;
-    padding: 0px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 400px;
-  
+* {
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
+
+.box{
+  position: relative;
+  width: 380px;
+  height: 550px;
+  background: #1c1c1c;
+  border-radius: 8px;
+  overflow: hidden;
+}
+
+.box::before {
+  content: '';
+  position: absolute;
+  top: -50%;
+  left: -50%;
+  width: 380px;
+  height: 550px;
+  background: linear-gradient(0deg, transparent, #45f3ff, #45f3ff);
+  transform-origin: bottom right;
+  animation: animate 6s linear infinite;
+}
+
+.box::after {
+  content: '';
+  position: absolute;
+  top: -50%;
+  left: -50%;
+  width: 380px;
+  height: 550px;
+  background: linear-gradient(0deg, transparent, #45f3ff, #45f3ff);
+  animation: animate 6s linear infinite;
+  transform-origin: bottom right;
+  animation-delay: -3s;
+}
+
+@keyframes animate {
+  0% {
+    transform: rotate(0deg);
   }
-  
-  .Auth-form {
-    width: 420px;
-    box-shadow: rgb(0 0 0 / 16%) 1px 1px 10px;
-    padding-top: 20px;
-    padding-bottom: 30px;
-    border-radius: 8px;
-    background-color: white;
+  100% {
+    transform: rotate(360deg);
   }
-  
-  .Auth-form-content {
-    padding-left: 12%;
-    padding-right: 12%;
-  }
-  
-  .Auth-form-title {
-    text-align: center;
-    margin-bottom: 1em;
-    font-size: 24px;
-    color: rgb(34, 34, 34);
-    font-weight: 800;
-  }
-  
-  label {
-    font-size: 14px;
-    font-weight: 600;
-    color: rgb(34, 34, 34);
-  }
+}
+
+#wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background: #23242a;
+}
+
+.form {
+  position: absolute;
+  inset: 2px;
+  border-radius: 8px;
+  background: #28292d;
+  z-index: 10;
+  padding: 20px 40px;
+  display: flex;
+  flex-direction: column;
+}
+
+h3 {
+  text-align: center;
+  font-size: 24px;
+  font-weight: 500;
+  color: #45f3ff;
+  letter-spacing: 0.1em;
+  padding-bottom: 15px;
+}
+
+.form-group {
+  margin-bottom: 15px;
+  position: relative;
+}
+
+.form-group input {
+  background: transparent;
+  border: none;
+  outline: none;
+  position: relative;
+  color: #23242a;
+}
+
+input {
+  height: 50px;
+  width: 300px;
+  outline: none;
+  border: 1px solid #dadce0;
+  padding: 10px;
+  border-radius: 5px;
+  font-size: inherit;
+  color: red !important;
+  transition: all 0.3s ease-in-out;
+}
+
+span {
+  position: absolute;
+  padding: 0px 5px;
+  left: 5px;
+  top: 50%;
+  color: #8f8f8f;
+  /* Quan trọng  */
+  pointer-events: none;
+  transform: translateY(-50%);
+  background: none;
+  transition: all 0.3s ease-in-out;
+}
+
+/* .form-group input:focus {
+  border: 2px solid #45f3ff;
+} */
+
+.form-group i {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 2px;
+  width: 100%;
+  background: #45f3ff;
+  border-radius: 4px;
+  transition: 0.5s;
+  pointer-events: none;
+}
+
+.form-group input:focus+i,
+.form-group input:valid+i {
+  height: 44px;
+}
+
+.form-group input:focus+span,
+.form-group input:valid+span {
+  top: 0px;
+  font-size: 13px;
+  font-weight: 500;
+  color: #45f3ff;
+}
+
+input#btn-login {
+  background: #45f3ff;
+  color: black !important;
+  cursor: pointer;
+  width: auto;
+}
+
+input#btn-login:hover {
+  opacity: 0.85;
+}
+
