--- a/front-end/src/components/Admin/Admin.css
+++ b/front-end/src/components/Admin/Admin.css
@@ -8,4 +8,13 @@
     border-radius: 2px solid red;
 }
 
+.cr {
+    margin-top: 2%;
+     margin-left: 2%;
+      max-width: 420px;
+      border: 2px solid;
+      border-radius: 8px;
+      padding: 10px;
+}
+
 
