--- a/front-end/src/page/product/Product.css
+++ b/front-end/src/page/product/Product.css
@@ -1,25 +1,4 @@
-.product {
-    margin-left: 15%;;
-    padding: 30px;
-}
-
-.product-item {
-    padding: 10px;
-}
-
-/* .card {
-    max-width: 20% ;
-    max-height: 400px ;
-} */
-
-.card-img-top {
-    height: 250px;
-}
-
-#sc {
-    top: 50px;
-    position: absolute;
-}
-#numOfProduct{
-    color: black;
+.product{
+    display: flex;
+    flex-wrap: wrap;
 }
