--- a/front-end/src/page/loading/index.css
+++ b/front-end/src/page/loading/index.css
@@ -40,9 +40,9 @@
   
   
 .loading{
-  display: flex;
   text-align: center;
   justify-content:center;
   width: 100%;
   height: 100vh;
+  display: table;
 }
