--- a/front-end/src/components/Card/Card.css
+++ b/front-end/src/components/Card/Card.css
@@ -8,7 +8,7 @@
 }
 
 .card img{  
-    width: 200px;
+    width: 97%;
     height: 200px;
     margin: 4px 0px 4px 4px;
     border-radius: inherit;
