--- a/front-end/src/components/registerForm/registerForm.css
+++ b/front-end/src/components/registerForm/registerForm.css
@@ -6,7 +6,7 @@
 .box{
   position: relative;
   width: 380px;
-  height: 550px;
+  height: 685px;
   background: #1c1c1c;
   border-radius: 8px;
   overflow: hidden;
@@ -18,7 +18,7 @@
   top: -50%;
   left: -50%;
   width: 380px;
-  height: 550px;
+  height: 685px;
   background: linear-gradient(0deg, transparent, #45f3ff, #45f3ff);
   transform-origin: bottom right;
   animation: animate 6s linear infinite;
@@ -30,7 +30,7 @@
   top: -50%;
   left: -50%;
   width: 380px;
-  height: 550px;
+  height: 685px;
   background: linear-gradient(0deg, transparent, #45f3ff, #45f3ff);
   animation: animate 6s linear infinite;
   transform-origin: bottom right;
@@ -50,15 +50,16 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
-  background: #23242a;
+  /* min-height: 100vh; */
+  background: #888ca4;
+  padding: auto;
 }
 
 .form {
   position: absolute;
   inset: 2px;
   border-radius: 8px;
-  background: #28292d;
+  background: #28294c;
   z-index: 10;
   padding: 20px 40px;
   display: flex;
@@ -147,14 +148,34 @@ span {
   color: #45f3ff;
 }
 
-input#btn-login {
+input.btn {
   background: #45f3ff;
   color: black !important;
   cursor: pointer;
   width: auto;
 }
 
-input#btn-login:hover {
-  opacity: 0.85;
+input.btn:hover {
+  /* opacity: 0.95; */
 }
 
+#file{
+  color: red;
+}
+
+.btn.b1{
+  background-color: red;
+  /* columns: 2; */
+  content: "cancel";
+}
+
+.btn-container{
+  width: 100%;
+  /* position: ; */
+  text-align: right;
+  display: block;
+  justify-content: right;
+}
+.btn-container > button{
+  margin: 0px 10px;
+}
