--- a/front-end/src/components/Card/Card.css
+++ b/front-end/src/components/Card/Card.css
@@ -4,7 +4,7 @@
     flex: 1;
     width: 20vw;
     height: 44vh;
-    background-color: darkgray;
+    /* background-color: darkgray; */
 }
 
 .card img{  
