--- a/front-end/src/components/User/Profile.css
+++ b/front-end/src/components/User/Profile.css
@@ -1,5 +1,6 @@
 .float-right {
     float: right;
+    margin-right: 20px;
 }
 
 .clear-both {
@@ -10,3 +11,29 @@
     border: 2px solid black;
     border-radius: 10px;
 }
+
+.col1 {
+    flex-direction: row;
+}
+
+.col2 {
+    margin-top: 10px;
+}
+
+.btn {
+    width: 70%;
+}
+
+@media only screen and (max-width: 600px) {
+    .col1 {
+        flex-direction: column;
+    }
+    
+    .col2 {
+        margin-top: 20px;
+    }
+
+    .btn {
+        width: 30%;
+    }
+  }
